--- a/media/templates/collection.mustache
+++ b/media/templates/collection.mustache
@@ -1,7 +1,8 @@
-<div class="collection_table">
+<div class="collection_table bg-light">
     <div class="media-column">
-        <div class="m-3 bg-light">
-            <div class="row p-3">
+        <div class="bg-light">
+            <h4 class="pt-3 text-center">Collection</h4>
+            <div class="row px-3">
                 <div class="col-md-6">
                     <label for="search-text-owner">Title</label>
                     <div class="switcher-tool switcher-search-text input-group">
@@ -114,9 +115,45 @@
             {{/numPages}}
         {{/paginator}}
 
-        <div class="collection-assets scroll annotation-embedding">
+        <div class="collection-assets annotation-embedding">
             <div id="asset_table" class="asset-table"></div>
         </div>
+
+        {{#paginator}}
+            {{#numPages}}
+                <ul class="pagination nav justify-content-end btn-sm mt-2" style="padding: 0px;">
+                    <li class="page-item {{^hasPrev}}disabled{{/hasPrev}}">
+                        <a class="page-link" data-page-number="1" href="#" aria-label="First">
+                            First
+                        </a>
+                    </li>
+                    <li class="page-item {{^hasPrev}}disabled{{/hasPrev}}">
+                        <a class="page-link"
+                            href="#" data-page-number="{{prevPage}}" aria-label="Previous">
+                            Previous
+                        </a>
+                    </li>
+                    <li class="page-item active">
+                        <div class="page-link">
+                            {{currentPage}} of {{numPages}}<span class="sr-only">(current)</span>
+                        </div>
+                    </li>
+                    <li class="page-item {{^hasNext}}disabled{{/hasNext}}">
+                        <a class="page-link "
+                            data-page-number="{{nextPage}}" href="#" aria-label="Next">
+                            Next
+                        </a>
+                    </li>
+                    <li class="page-item {{^hasNext}}disabled{{/hasNext}}">
+                        <a class="page-link"
+                            data-page-number="{{numPages}}" href="#" aria-label="Last">
+                            Last
+                        </a>
+                    </li>
+                </ul>
+            {{/numPages}}
+        {{/paginator}}
+        
 
     </div>  {{! end media column }}
 </div>
