--- a/media/templates/collection_assets.mustache
+++ b/media/templates/collection_assets.mustache
@@ -52,90 +52,43 @@
     <div class="materials column-contents">
         <div id="record-{{id}}" class="record record-{{primary_type}} gallery-item-project">
             <input type="hidden" class="record" value="{{id}}" name="record-id" />
-            <h4 id="asset-item-{{id}}" class="asset_title">
-                <div class="actions">
-                    {{#editable}}
-                        <a class="collection-choice delete-asset" href="{{id}}" title="Remove item from your collection">
-                            <img src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_delete.png" class="delete_icon" alt="Remove item from your collection"  />
-                        </a>
-                        <a class="collection-choice edit-asset" href="{{id}}" title="Quick edit item attributes">
-                            <img src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_edit.png" class="edit_icon" alt="Edit item attributes"  />
-                        </a>
-                    {{/editable}}
-                    <a class="collection-choice create-annotation" href="{{id}}" title="Create selection on this item">
-                        <img src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_addselection.png" class="create_annotation_icon" alt="Create selection"  />
+
+            <div class="card-thumbnail">
+                <div class="media-type"><span class="badge badge-light">{{media_type_label}}</span></div>
+                <div class="image-overlay">
+                    <a href="{{local_url}}" title="{{title}}">
+                     {{#thumb}}
+                        <img class="mx-auto d-block img-fluid" alt="Item Thumbnail" src="{{thumb}}" style="max-width: 100%;" />
+                     {{/thumb}}
                     </a>
                 </div>
-                {{#citable}}
-                    <span class="citationTemplate">
-                        <img class="materialCitation clickableCitation" alt=""
-                        src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_insert_{{media_type_label}}.png#annotation={{local_url}}&title={{title}}&type={{primary_type}}&range1=0"
-                        title="Add item to the composition"
-                        name="{{local_url}}"/>
-                    </span>
-                {{/citable}}
-                <a class="asset-title-link insert"
-                    {{#title}}
-                        title="{{title}}"
-                    {{/title}}
-                    {{^title}}
-                        title="-Untitled-"
-                    {{/title}}
-                    target="_blank" href="{{local_url}}">
-                    {{#title}}
-                        {{#ellipsis35}}{{title}}{{/ellipsis35}}
-                    {{/title}}
-                    {{^title}}
-                        -Untitled-
-                    {{/title}}
-                </a>
-            </h4>
-            <table class="item-level-info">
-                <tr>
-                    <td class="item-thumb">
-                        {{#thumb}}
-                            <a href="{{local_url}}"><img class="asset-thumb" src="{{thumb}}" alt="Item Thumbnail" /></a>
-                        {{/thumb}}
-                    </td>
-                </tr>
-                <tr>
-                    <td class="item-meta">
-                        {{#global_annotation}}
-                            <ul class="record-metadata-list">
-                                {{#vocabulary}}
-                                    <li class="annotation-global-body meta">
-                                        <span class="metadata-label">{{display_name}}: </span>
-                                        <span class="metadata-value">
-                                            {{#terms}}
-                                                {{display_name}}
-                                            {{/terms}}
-                                        </span>
-                                    </li>
-                                {{/vocabulary}}
+            </div>
 
-                                {{#metadata.tags.length}}
-                                    <li class="annotation-global-tags meta">
-                                        <span class="metadata-label">Item Tags:</span>
-                                        <span class="metadata-value">
-                                            {{#metadata.tags}}
-                                                <a class="switcher-choice filterbytag" href="{{name}}" title='Filter collection by "{{name}}"'>{{name}}</a>&nbsp;
-                                            {{/metadata.tags}}
-                                        </span>
-                                    </li>
-                                {{/metadata.tags.length}}
+            <div class="px-3">
+                <h5 id="asset-item-{{id}}" class="asset_title mt-3">
+                    <a class="asset-title-link insert"
+                        {{#title}}
+                            title="{{title}}"
+                        {{/title}}
+                        {{^title}}
+                            title="-Untitled-"
+                        {{/title}}
+                        target="_blank" href="{{local_url}}">
+                        {{#title}}
+                            {{#ellipsis35}}{{title}}{{/ellipsis35}}
+                        {{/title}}
+                        {{^title}}
+                            -Untitled-
+                        {{/title}}
+                    </a>
+                </h5>
+                <hr />
+                <h6>Selections</h6>
 
-                                {{#metadata.body}}
-                                    <li class="annotation-global-body meta">
-                                        <span class="metadata-label">Item Note:</span> <span class="metadata-value">{{metadata.body}}</span>
-                                    </li>
-                                {{/metadata.body}}
-                            </ul>
-                        {{/global_annotation}}
-                    </td>
-                </tr>
-            </table>
-
-            <div id="record-{{id}}-metadata" class="record-metadata">
+                <div id="record-{{id}}-metadata" class="record-metadata">
+                {{^annotation_count}}
+                    <p class="text-muted">None</p>
+                {{/annotation_count}}
                 {{#annotation_count}}
                     <div class="asset-clips">
                         {{#annotations}}
@@ -246,6 +199,7 @@
                         {{/annotation_count}}
                         {{! annotations exist }}
         </div> {{! end record metadata }}
-    </div> {{! end id="record-id" }}
+            </div>
+        </div> {{! end id="record-id" }}
     </div> {{! end class="materials column-contents scroll" }}
 {{/assets}}
