--- a/mediathread/templates/dashboard/base_course_dashboard.html
+++ b/mediathread/templates/dashboard/base_course_dashboard.html
@@ -5,7 +5,7 @@
 {% block content %}
     {{ block.super }}
 
-    <div class="dashboard-module-header"><h2>Course Settings</h2></div>
+    <div class="dashboard-module-header"><h2>Manage Course</h2></div>
 
     <div class="layout-horizontal">
         <div class="layout-horizontal-left">
