cypress tests added

--- a/mediathread/templates/courseaffils/course_update_form.html
+++ b/mediathread/templates/courseaffils/course_update_form.html
@@ -1,7 +1,7 @@
 {% extends 'dashboard/base_course_dashboard.html' %}
 {% load bootstrap4 %}
 
-{% block title %}{{block.super}}&mdash; Course Settings{% endblock %}
+{% block title %}{{block.super}}&mdash; Manage Course{% endblock %}
 
 {% block dashboard_content %}
     {{ form.media }}
