--- a/mediathread/templates/dashboard/base_course_dashboard.html
+++ b/mediathread/templates/dashboard/base_course_dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'base_new.html' %}
 
-{% block title %}&mdash; Course Settings {% endblock %}
+{% block title %}&mdash; Manage Course {% endblock %}
 
 {% block content %}
     {{ block.super }}
