--- a/mediathread/templates/dashboard/class_migrate.html
+++ b/mediathread/templates/dashboard/class_migrate.html
@@ -37,7 +37,7 @@
 
         <% if (projects && projects.length > 0) { %>
             <h5><%= projects.length %> Compositions &amp; Assignments</h5>
-            <div><input id="import-projects" type="button" class="btn btn-outline-primary" value="Select Compositions &amp; Assignments"></div>
+            <div><input id="import-projects" type="button" class="btn btn-outline-primary btn-sm" style="font-size: .75rem" value="Select Compositions &amp; Assignments" /></div>
             <div id="import-projects-dialog" class="import-dialog font-weight-bold" style="display: none" title="Select Compositions & Assignments To Migrate">
                 <div class="float-right"><a href="#" id="select-all-projects" class="text-primary">Select All</a> | <a href="#" id="clear-all-projects" class="text-primary">Clear All</a></div>
                 <br />
