--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -3045,8 +3045,9 @@ div.collection_table {
 /* Asset View Published */
 
 .asset-view-published {
-    height: 100%;
     min-height: 300px;
+    position: sticky;
+    top: 5px;
 }
 
 .asset-title {
