--- a/mediathread/templates/projects/assignment_list.html
+++ b/mediathread/templates/projects/assignment_list.html
@@ -84,7 +84,8 @@ Assignments
                                     type="button" data-toggle="collapse"
                                     data-target="#collapseOne" aria-expanded="true"
                                     aria-controls="collapseOne">
-                                    How to add assignments</button>
+                                    Hide
+                                </button>
                             </h2>
                         </div>
                         <div id="collapseOne" class="collapse hide bg-light"
@@ -286,6 +287,14 @@ Assignments
                 $frm.find('[name="page"]').val(pageNo);
                 $frm.submit();
             });
+
+            jQuery('#collapseOne').on('hidden.bs.collapse', function(evt) {
+                jQuery('.btn-show-assignments').html('Add an assignment');
+            });
+            jQuery('#collapseOne').on('shown.bs.collapse', function(evt) {
+                jQuery('.btn-show-assignments').html('Hide');
+            });
+
         });
     </script>
 {% endblock %}
