--- a/mediathread/templates/projects/assignment_table_faculty.html
+++ b/mediathread/templates/projects/assignment_table_faculty.html
@@ -15,9 +15,6 @@
                 Status
             </th>
             <th>
-                Action
-            </th>
-            <th>
                 Responses
             </th>
             <th data-sort-by="full_name"
@@ -43,25 +40,13 @@
                 </td>
                 <td>
                     <div>
-                        {{object.title}}
+                        <a href="{% url 'project-workspace' request.course.id object.id %}" title="{{object.title}}">
+                            {{object.title}}
+                        </a>
                     </div>
                 </td>
                 <td>
                     {{object.visibility_short}}
-                </td>
-                <td>
-                    {% if request.user == object.author or request.user in object.participants %}
-                        <a class="btn btn-sm btn-primary btn-block"
-                            href="{% url 'project-workspace' request.course.id object.id %}" title="{{object.title}}">
-                                Edit
-                        </a>
-                    {% else %}
-                        <a class="btn btn-sm btn-secondary btn-block"
-                            href="{% url 'project-workspace' request.course.id object.id %}" title="{{object.title}}">
-                                View
-                        </a>
-                    {% endif %}
-                    </a>
                 </td>
                 <td class="text-center">
                     {% published_assignment_responses object as response_count %}
